--- a/user.yml
+++ b/user.yml
@@ -231,7 +231,7 @@ profile:
     - role: { attr: disabled }
   values:
     - sql: |
-        select title,first_name,last_name,cellphone,email_address, group_concat(r.name) role
+        select title,first_name,last_name,cellphone,email_address, r.name role
         from user u left join user_role ur on u.id = ur.user_id
         left join role r on r.code = ur.role_code
         where u.id = $uid
