-Fixed profile sql statement, so it can retrieve assigned role

--- a/user.yml
+++ b/user.yml
@@ -210,7 +210,8 @@ modify:
         type: dropdown 
   values:
     - sql: |
-        select title,first_name,last_name,cellphone,email_address,r.name role  
+        select title,first_name,last_name,cellphone,email_address,r.code
+        role  
         from user u left join user_role ur on u.id = ur.user_id
         left join role r on r.code = ur.role_code
         where id = $key
