--- a/user.yml
+++ b/user.yml
@@ -106,7 +106,7 @@ edit:
   access: admin
   audit: $title,$first_name,$last_name,$cellphone,$email_address,$assigned_role
   action:
-    dialog: /user/modify
+    dialog: user/modify
 
 history:
   access: admin,manager
@@ -136,7 +136,7 @@ login:
         valid: provided
         
   actions:
-    - logon
+    - login
     - forgot_password:
         desc: Click here if you have forgotten your password and you need to reset it
         action:
@@ -195,7 +195,6 @@ logout:
   audit:
     
 modify:
-#  access: admin
   type: labelled_input_page
   desc: Change user details
   width: 600
@@ -210,10 +209,8 @@ modify:
         type: dropdown 
   values:
     - sql: |
-        select title,first_name,last_name,cellphone,email_address,r.code
-        role  
+        select title,first_name,last_name,cellphone,email_address,requested_role  
         from user u left join user_role ur on u.id = ur.user_id
-        left join role r on r.code = ur.role_code
         where id = $key
   actions:
     - update
@@ -232,10 +229,9 @@ profile:
     - role: { attr: disabled }
   values:
     - sql: |
-        select title,first_name,last_name,cellphone,email_address,r.name role
+        select title,first_name,last_name,cellphone,email_address,requested_role  
         from user u left join user_role ur on u.id = ur.user_id
-        left join role r on r.code = ur.role_code
-        where u.id = $uid
+        where id = $uid
   actions:
     - update
 
