--- a/controls.yml
+++ b/controls.yml
@@ -343,7 +343,7 @@ heading_3:
     html: <h3 id="$code"><h3>
     
 footer_table:
-  html: <table frame="box" ><tr></tr><tr><td valign="top" colspan="4">$field1</br></td></tr>
+  html: <table background="footer2.png"><tr></tr><tr><td valign="top" colspan="4">$field1</br></td></tr>
         <tr></tr><tr><td valign="top">$field3</td><td align="right">$field6</td></tr></table>
 address_table:
     html: <table><td></td>Contact Us<tr><td>$tel1</td><td>:</td><td>$tel2</td></tr>
@@ -363,7 +363,11 @@ social_media:
     
   
 four_cell_row:
-  html: <table></tr>
-        <tr><td>$field3</td></tr></table>
+  html: <table><th>$heading</th><tr><td  width="160px" colspan="2"><p>$introduction</br></p></td></tr><tr></tr>
+        <tr></td ><td valign="bottom">$field1</td><td valign="bottom">$field2</td><td valign="bottom">$field3</td>
+        </tr></table>
+        
 
-...
+ 
+#text_content:
+#    html: <marquee onmouseover="this.stop()" onmouseout="this.start()" behavior="scroll" direction="up" scrollamount="1"><h3>$topic</h2><p>$text</p><p>$information</p></marquee>
