--- a/controls.yml
+++ b/controls.yml
@@ -334,13 +334,13 @@ textarea:
 text_input: {type: input }
 
 heading_1:
-    html: <h1 id="$code"><h1>
+    html: <h1 id="$code">$name</h1>
     
 heading_2:
-    html: <h2 id="$code"><h2>
+    html: <h2 id="$code">$name</h2>
     
 heading_3:
-    html: <h3 id="$code"><h3>
+    html: <h3 id="$code">$name</h3>
     
 footer_table:
   html: <table background="footer2.png"><tr></tr><tr><td valign="top" colspan="4">$field1</br></td></tr>
