- put the input control back

--- a/controls.yml
+++ b/controls.yml
@@ -163,6 +163,8 @@ hidden:
 image:
   html: <img id="$code" src="$src" title="$desc"></img>
 
+input: 
+  html: <input id="$code" type="text"></input>
 
 inline_input:
   html: <a class=input>$field<span class="input">$desc</span></a>
