--- a/user.yml
+++ b/user.yml
@@ -225,8 +225,9 @@ profile:
     - role: { attr: disabled }
   values:
     - sql: |
-        select title,first_name,last_name,cellphone,email_address,requested_role  
-        from user u left join user_role ur on u.id = ur.user_id
+        select title,first_name,last_name,cellphone,email_address,r.name role 
+        from user u left join user_role ur on u.id = ur.user_id 
+        join role r on r.code = ur.role_code
         where id = $uid
   actions:
     - update
