--- a/user.yml
+++ b/user.yml
@@ -224,7 +224,7 @@ profile:
     - email_address
     - role: { attr: disabled }
   values:
-    - sql: |
+    - sql_values: |
         select title,first_name,last_name,cellphone,email_address,r.name role 
         from user u left join user_role ur on u.id = ur.user_id 
         join role r on r.code = ur.role_code
